# jupyterhub

./: .all-contributorsrc  .bowerrc  .codecov.yml  .coveragerc  .deepsource.toml  .dockerignore  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHECKLIST-Release.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Caddyfile  Dockerfile  Dockerfile.onbuild  IRkernel.r  LICENSE  MANIFEST.in  Makefile  RDP-VPS.main  README.md  README_UI.md  RELEASE.md  SECURITY.md  auth_token.env  bower-lite  bower.json  brand.less  circle.yml  config  dev-requirements.txt  doc-requirements.txt  docker-compose.yaml  docs-requirements.txt  (+30 more)
.circleci/: config.yml
.github/: dependabot.yaml  dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  installation-and-configuration-issues.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  codeql.yml  registry-overviews.yml  release.yml  support-bot.yml  test-docs.yml  test-javascript.yml  test-jsx.yml  test.yml
HPC_TEMPLE/: docker_image_form.py  docker_spawner.py  jhub_dev.md  jhub_docker.md  jhub_k8s.md  k8s_hub.yaml  k8s_service.yaml  my_script.py
HPC_TEMPLE/jupyterhub/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
ci/: check_installed_data.py  check_sdist.py  docker-db.sh  init-db.sh
ci/mock-gevent/: gevent.py  pyproject.toml
ci/mock-greenlet/: greenlet.py  pyproject.toml
ci/oldest-dependencies/: oldest-dependencies.txt  requirements.in  requirements.old  requirements.txt
demo-image/: Dockerfile  README.md  jupyterhub_config.py
dockerfiles/: Dockerfile.alpine  Dockerfile.config  README.md  test.py
docs/: Makefile  authenticators.md  changelog.md  changelog.rst  conf.py  developing-docs.md  doc-requirements.txt  environment.yml  examples.md  generate-metrics.py  generator.py  getting-started.md  howitworks.md  howitworks.rst  index.rst  make.bat  notesapi.md  notesapi.txt  package.json  requirements.txt  rest-api.yml  spawners.md  spawners.rst  test_docs.py
docs/source/: authenticators-users-basics.md  authenticators.md  authenticators.rst  changelog.md  changelog.rst  conf.py  config-basics.md  config-examples.md  config-topics.rst  configuration-guide.rst  contributor-list.md  dev-installation.rst  gallery-jhub-deployments.md  getting-started.md  getting-started.rst  howitworks.md  index-about.md  index-about.rst  index-admin.md  index-admin.rst  index-installation.rst  index.md  index.rst  installation-basics.md  installation-guide-hard.md  installation-guide-hard.rst  installation-guide.md  installation-guide.rst  installation.rst  jupyterhub-aws-setup.md  jupyterhub-deployment-aws.md  networking-basics.md  quickstart-docker.md  quickstart-docker.rst  quickstart.md  rbac.md  redirects.txt  rest.md  security-basics.md  security-basics.rst  (+10 more)
docs/sphinxext/: autodoc_traits.py
examples/azuread-with-group-management/: jupyterhub_config.py  requirements.txt
examples/bootstrap-script/: README.md  bootstrap.sh  jupyterhub_config.py
examples/collaboration-accounts/: README.md  jupyterhub_config.py  projects.yaml
examples/cull-idle/: README.md  cull_idle_servers.py  jupyterhub_config.py
examples/custom-scopes/: grades.py  jupyterhub_config.py
examples/docker-alpine/: Dockerfile.example1  auth_token.env  docker-compose.yaml  jupyterhub_config.py
examples/external-oauth/: README.md  jupyterhub_config.py  launch-service-basic.sh  launch-service.sh  whoami-oauth-basic.py  whoami-oauth.py
examples/forced-login/: README.md  external_app.py  index.html  jupyterhub_config.py  requirements.txt
examples/multi-docker-host-form/: Dockerfile  README.md  docker-compose.yml  jupyterhub_config.py
examples/postgres/: README.md
examples/postgres_db/: Dockerfile  initdb.sh
examples/read-only/: README.md  jupyter_server_config.py  jupyterhub_config.py
examples/server-api/: jupyterhub_config.py  start-stop-server.py
examples/service-announcement/: README.md  announcement.py  jupyterhub_config.py
examples/service-fastapi/: Dockerfile  README.md  jupyterhub_config.py  requirements.txt
examples/service-notebook/: README.md
examples/service-whoami/: README.md  jupyterhub_config.py  launch.sh  whoami-oauth.py  whoami.py
examples/service-whoami-flask/: README.md  jupyterhub_config.py  launch.sh  whoami-flask.py  whoami-oauth.py  whoami.py
examples/spawn-form/: jupyterhub_config.py
examples/sudo/: Dockerfile  sudoers  (+1 more)
hooks/: README.md  build  post_build  post_push
jenkins-scripts/: publish.sh
jsx/: .eslintrc.json  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  webpack.config.js
jupyterhub/: .coveragerc  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COPYING.md  MANIFEST.in  __init__.py  __main__.py  _config.py  _data.py  _memoize.py  _version.py  _xsrf_utils.py  alembic.ini  app.py  auth.py  check_db  crypto.py  dbutil.py  emptyclass.py  events.py  handlers.py  httpclient.py  log.py  metrics.py  metricshandler.py  nullauthenticator.py  objects.py  orm.py  package.json  pagination.py  proxy.py  roles.py  scopes.py  singleuser.py  singleuserapp.py  slugs.py  spawner.py  traitlets.py  user.py  (+3 more)
jupyterlab_hub/: MANIFEST.in  README.md  RELEASE.md  package.json  setup.py
lib/: configproxy.js  main.js
monitoring/: README.md
multiuser/: __main__.py  app.py  db.py  handlers.py  headers.py  multiuser.py  singleuser.py  spawner.py  user.py  utils.py
multiuser_notebook/: multiuser.py  singleuser.py
onbuild/: Dockerfile  README.md
scripts/: jupyterhub  jupyterhub-singleuser
singleuser/: Dockerfile  README.md  install_jupyterhub
spawners/: __init__.py  simplespawner.py
templates/: 404.html  admin.html  error.html  home.html  login.html  native-login.html  page.html  signup.html  spawn_pending.html
test-db-upgrade/: docker-db.sh  init-db.sh  jupyterhub_config.py  old-requirements.txt  test.sh
testing/: jupyterhub_config.py
tools/: tasks.py
traefik/: dummyHttpServer.py  traefik.toml
(+611 files in other folders)
